# riscv-sim

./: README.md  riscv-sim.cabal
app/: Main.hs
src/: Instructions.hs  Parser.hs  ParserLib.hs  Tokenizer.hs  Tokens.hs  Utils.hs  foo.c
test/: Spec.hs
