name:                riscv-sim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jrreed83/riscv-sim#readme
license:             BSD3
license-file:        LICENSE
author:              Joey Reed
maintainer:          joeyrreed@gmail.com
copyright:           2017 Joey Reed
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,Instructions
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , hashmap
                     , bytestring
                     , containers
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

executable riscv-sim-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , riscv-sim
  default-language:    Haskell2010

test-suite riscv-sim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , riscv-sim
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jrreed83/riscv-sim
